# transmission-cleanup

./: README.md  justfile  pyproject.toml  transmission_cleanup.py
