[tool.poetry]
name = "transmission-cleanup"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transmissionrpc = "^0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
