[tool.poetry]
name = "transmission-cleanup"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"bencode.py" = "^4.0.0"
transmission-rpc = "^3.2.5"
typer = {extras = ["all"], version = "^0.12.5"}

[tool.poetry.dev-dependencies]


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
